# howl

./: .gitignore  README.md  TODO.md  pyproject.toml
howl/: __main__.py  _test.py  app.py
howl/events/: load_phases.py
howl/models/: model.py  phase.py  quarter.py
howl/tests/models/: test_phase.py  test_quarter.py
