[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "howl"
# authors = []
description = "A tracker of events that happen once every 28 days or so"
#readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
]
dynamic = ["version"]

dependencies = [
    "kivy",
    "kivymd",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.1.3",
]

[tool.setuptools.exclude-package-data]
howl = ["tests*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
select = ["E4", "E7", "E9", "F", "I001"]
target-version = "py38"

[tool.ruff.isort]
combine-as-imports = true

[tool.setuptools]
py-modules = []
